# osgiliath-rs

./: Cargo.toml  readme.md
src/: lib.rs
tests/: 01-parse-trait.rs  02-generate-request-type.rs  03-generate-response-type.rs  04-tower-service-implementation.rs  05-tower-service-implements-trait.rs  06-service-partial-equality.rs
