[package]
name = "osgiliath"
version = "0.1.0"
edition = "2021"
authors = ["Martin Rückl <enigma@nbubu.de>"]

[lib]
proc-macro = true

[dependencies]
tower = "0.4.8"
async-trait = "0.1.51"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.96", features = ["full", "parsing"] }
convert_case = "0.5.0"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["rt", "macros"] }
trybuild = { version = "1.0.49", features = ["diff"] }
futures = "0.3.24"
